--- a/julia/css/demo.css
+++ b/julia/css/demo.css
@@ -171,7 +171,7 @@ header > ul li a:hover, header > ul li a:focus{
     color: #dfd !important;
 }
 
-header > ul li current{
+header > ul li .current a {
     border-bottom: 2px solid #B5E853;
 }
 
