--- a/julia/css/demo.css
+++ b/julia/css/demo.css
@@ -145,7 +145,6 @@ header > ul li {
     height: 32px;
     line-height: 32px;
     padding: 4px 20px 0px 0px;
-    color: #fff !important;
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
     font-family: 'Syncopate', sans-serif;
     font-size: 12pt;
@@ -171,7 +170,7 @@ header > ul li a:hover, header > ul li a:focus{
     color: #dfd !important;
 }
 
-header > ul li .current a {
+header .current > a {
     border-bottom: 2px solid #B5E853;
 }
 
